@@ -191,11 +191,15 @@ def File(filename, options=None):
     fileobj = file(filename, "rb")
     try:
         header = fileobj.read(128)
-        results = [Kind.score(filename, fileobj, header) for Kind in options]
+        # Sort by name after score. Otherwise import order affects
+        # Kind sort order, which affects treatment of things with
+        # equals scores.
+        results = [(Kind.score(filename, fileobj, header), Kind.__name__)
+                   for Kind in options]
     finally:
         fileobj.close()
     results = zip(results, options)
     results.sort()
-    score, Kind = results[-1]
+    (score, name), Kind = results[-1]
     if score > 0: return Kind(filename)
     else: return None
